Updated Items not completed

--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -3,6 +3,7 @@ Release Notes
 / Michael Mittelman for Exos Interview /
 /             5-15/2017                /
 
+ITEMS COMPLETED:
 1. Created basic django 1.9 env
 2. Updated User model by adding fields into User class in django/contrib/auth/models.py
 3. ran makemigrations to create the migration and ran migrate to add the fields to the database
@@ -11,3 +12,6 @@ Release Notes
 6. Created two template tags to display allowed/blocked based on age and BizzFuzz based on random number
 7. Added columns to list template to display template tags
 8. Created unit test to test each view and the two template tags.
+
+ITEMS NOT COMPLETED:
+1. I did not have time to add the ability to download excel file.
